k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  
  tls:
    - hosts:
        - localhost # Replace with your domain or use nip.io for testing
      secretName: secret-tls

  rules:
    - host: localhost # Replace with your domain or use nip.io for testing
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
          - path: /api/v1/backend/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-call-center
                port:
                  number: 6001
          - path: /api/v1/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-user
                port:
                  number: 6002
